@@ -1,21 +1,27 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+		 xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
+
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
 		<version>3.4.4</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
+
 	<groupId>com.oficinadafesta</groupId>
 	<artifactId>oficina-backend</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>oficina-backend</name>
-	<description>Demo project for Spring Boot</description>
+	<description>Projeto da Oficina da Festa</description>
+
 	<properties>
 		<java.version>17</java.version>
+		<javafx.sdk>C:/Users/bryan/Downloads/javafx-sdk-21.0.6</javafx.sdk> <!-- Caminho do JavaFX -->
 	</properties>
+
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -61,9 +67,10 @@
 		<dependency>
 			<groupId>com.mysql</groupId>
 			<artifactId>mysql-connector-j</artifactId>
-			<version>8.0.33</version>
+			<version>8.2.0</version>
 		</dependency>
-		<!-- Dependências do JavaFX -->
+
+		<!-- JavaFX -->
 		<dependency>
 			<groupId>org.openjfx</groupId>
 			<artifactId>javafx-controls</artifactId>
@@ -108,13 +115,19 @@
 				</configuration>
 			</plugin>
 
-			<!-- Plugin do JavaFX -->
+			<!-- Plugin JavaFX -->
 			<plugin>
 				<groupId>org.openjfx</groupId>
 				<artifactId>javafx-maven-plugin</artifactId>
 				<version>0.0.8</version>
 				<configuration>
-					<mainClass>com.oficinadafesta.OficinaDaFestaApplication</mainClass> <!-- ajuste conforme seu Main -->
+					<mainClass>com.oficinadafesta.OficinaDaFestaApplication</mainClass>
+					<options>
+						<option>--module-path</option>
+						<option>${javafx.sdk}/lib</option>
+						<option>--add-modules</option>
+						<option>javafx.controls,javafx.fxml</option>
+					</options>
 				</configuration>
 			</plugin>
 		</plugins>
